# POKER-HANDS

./: CMakeLists.txt  README.md  main.cpp  run.sh
src/: CMakeLists.txt  cards.cpp  cards.h  play.cpp  smcVector.hpp
tests/: CMakeLists.txt  studentTests.cpp
